--- a/hexa.html
+++ b/hexa.html
@@ -10,56 +10,22 @@
     <script type='text/javascript' src='hexaface.js'></script>
   </head>
 <body>
-<div id='container1'>
-<span id='container2'>
-<span id='container3'>
-<span id='container4'>
-<span id='container5'>
-<span id='container6'>
-<div id='container7'>
-<span id='container8'>
-<span id='container9'>
-<span id='container10'>
-<span id='container11'>
-<span id='container12'>
-<div id='container13'>
-<span id='container14'>
-<span id='container15'>
-<span id='container16'>
-<span id='container17'>
-<span id='container18'>
-<div id='container19'>
-<span id='container20'>
-<span id='container21'>
-<span id='container22'>
-<span id='container23'>
+
+<span id="hiver_1" class="hexaface" scale="3" fill-color="yellow" stroke-color="#FFFFFF" smiley=":*)"></span>	
+<span id="hiver_2" class="hexaface" scale="3" fill-color="blue" stroke-color="#FFFFFF" smiley=":*)"></span>	
+<span id="hiver_3" class="hexaface" scale="4" stroke-color="green" smiley=":*)"></span>	
 </div>
 </body>
 <script>
+	
+$(document).ready(function(){
+	$(".hexaface").each(function(){
+		var element = $(this);
+		element.drawHexaface('hex_'+element.attr("id"), element.attr("smiley"), element.attr("scale"), element.attr("stroke-color"), element.attr("fill-color") );
+	});
+});
 
-  $('#container1').drawHexaface('hex', ":*)", 3)
-  $('#container2').drawHexaface('hex', ":+]", 3)
-  $('#container3').drawHexaface('hex', "\u00B1o>", 3)
-  $('#container4').drawHexaface('hex', ";^D", 3)
-  $('#container5').drawHexaface('hex', ":\u00A7]", 3)
-  $('#container6').drawHexaface('hex', "8^'", 3)
-  $('#container7').drawHexaface('hex', ":o>", 3)
-  $('#container8').drawHexaface('hex', ":+D", 3)
-  $('#container9').drawHexaface('hex', "&)", 3)
-  $('#container10').drawHexaface('hex', ":+)", 3)
-  $('#container11').drawHexaface('hex', ":~)", 3)
-  $('#container12').drawHexaface('hex', ":[)", 3)
-  $('#container13').drawHexaface('hex', ":-J", 3)
-  $('#container14').drawHexaface('hex', ";=)", 3)
-  $('#container15').drawHexaface('hex', "%->", 3)
-  $('#container16').drawHexaface('hex', "=`J", 3)
-  $('#container17').drawHexaface('hex', ":)", 3)
-  $('#container18').drawHexaface('hex', ":]", 3)
-  $('#container19').drawHexaface('hex', ":D", 3)
-  $('#container20').drawHexaface('hex', "=)", 3)
-  $('#container21').drawHexaface('hex', ":o]", 3)
-  $('#container22').drawHexaface('hex', ":~>", 3)
-  $('#container23').drawHexaface('hex', ":}>", 3)
+
 
 </script>
 </html>
